src/tests/fixtures/preprocessor/errors/assert_include_2.h
Passthrough(int i = 4);
